<resources>
    <string name="app_name">CameraLib</string>
    <string name="take_photo_fail">拍照失败</string>

    <string name="permission_grant_fail">授权失败</string>
    <string name="qr_code_fail">无法识别二维码识别</string>

    <string name="open_camera_light">打开</string>
    <string name="close_camera_light">关闭</string>
    <string name="auto_camera_light">自动</string>
    <string name="fill_camera_light">补光</string>

    <string name="standard_size">标准</string>
    <string name="fullscreen_size">全屏</string>
    <string name="square_size">方形</string>
</resources>
